<?xml version="1.0"?>
<package format="2">
  <name>main_control</name>
  <version>0.1.0</version>
  <description>The main_control package</description>

  <author email="kimtj5521@gmail.com">kimtj5521</author>
  <maintainer email="kimtj5521@gmail.com">kimtj5521</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
  
  </export>
</package>
